fix center alignment

--- a/client/assets/styles/scss/components/buttons/buttons.scss
+++ b/client/assets/styles/scss/components/buttons/buttons.scss
@@ -64,7 +64,6 @@
 
   // fancy select
   .display .iconnables {
-    float: left;
     height: 21px;
     margin-right: 6px;
     top: 6px;
